syntax = "proto3";

package proto;

option go_package = "proto/";

message LoginRequest {
  string username = 1;
  string password = 2;
}

message VerifyRequest {
  string token = 1;
}

message LoginResponse {
  string token = 1;
}

message VerifyResponse {
  bool is_auth = 1;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse){};
  rpc Verify(VerifyRequest) returns (VerifyResponse){};
}